Add RSS feed and spruced up my oldest post

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+url: "http://brycefisher.github.io"
+name: "Bryce Fisher-Fleig's"
+description: "Drupal and Front End Best Practices"
+
 safe: false
 timezone: America/Los_Angelos
 encoding: utf-8
