Setup RSS feeds for two categories

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: "http://brycefisher.github.io"
-name: "Bryce Fisher-Fleig's"
+name: "Bryce Fisher-Fleig"
 description: "Drupal and Front End Best Practices"
 
 safe: false
