Updated site url

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "http://brycefisher.github.io"
+url: "https://bryce.fisher-fleig.org/
 name: "Bryce Fisher-Fleig"
 description: "Drupal and Front End Best Practices"
 
