--- a/_config.yml
+++ b/_config.yml
@@ -21,5 +21,6 @@ permalink: /blog/:title
 relative_permalinks: false
 pygments: true
 paginate: 10
+lsi: true
 paginate_path: /blog/:num
 markdown: kramdown
