Updated site description

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: "https://bryce.fisher-fleig.org"
 rss_url: "http://bryce.fisher-fleig.org"
 name: "Bryce Fisher-Fleig"
-description: "Rust, Javascript, Php, Drupal, and Front End Web Development"
+description: "Full Stack Forays into Web Development"
 
 safe: false
 timezone: America/Los_Angelos
