--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,20 @@ rss_url: "http://bryce.fisher-fleig.org"
 name: "Bryce Fisher-Fleig"
 description: "Full Stack Forays into Web Development"
 
+gems: [jekyll-paginate]
+
 safe: false
 timezone: America/Los_Angelos
 encoding: utf-8
 exclude:
-- sass
 - README.md
-- LICENSE
 - config.rb
 - publish.sh
 - list-categories.sh
+- awscli
+- .gitignore
+- .travis.yml
+- .jekyll-metadata
 
 include:
 - css
@@ -25,3 +29,6 @@ highlighter: true
 paginate: 10
 paginate_path: /blog/:num
 markdown: kramdown
+
+sass:
+    sass_dir: css
