--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 before_install:
 - docker pull grahamc/jekyll@55843befcdb3
 - docker images
+- # docker run grahamc/jekyll build
 
 script:
 - pwd
