--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
   - docker
 
 before_install:
-- docker pull grahamc/jekyll@55843befcdb3
+- docker pull grahamc/jekyll
 - docker images
-- # docker run grahamc/jekyll build
+- alias jekyll='sudo docker run --rm -v "$(pwd):/src" grahamc/jekyll'
 
 script:
-- pwd
-- ls
+- jekyll build
+- ls _site
