--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
 sudo: required
 
-language: ruby
-
 services:
   - docker
 
-before_install:
-- docker pull grahamc/jekyll
-- docker images
-- alias jekyll='sudo docker run --rm -v "$(pwd):/src" grahamc/jekyll'
-
 script:
-- jekyll build
-- ls _site
+- docker pull grahamc/jekyll
+- docker run --name=jekyll -v "$(pwd):/src" grahamc/jekyll build
+- docker logs jekyll
+- ls -lah
