--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ sudo: required
 services:
   - docker
 
+before_install:
+ - curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+ - unzip awscli-bundle.zip
+ - ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+ - aws help
+
 script:
 - docker pull grahamc/jekyll
 - docker run --name=jekyll -v "$(pwd):/src" grahamc/jekyll build
