--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 before_install:
  - curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
  - unzip awscli-bundle.zip
- - ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+ - sudo ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
  - aws help
 
 script:
