fix typo in calling piblish script

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ script:
 - docker pull grahamc/jekyll
 - docker run --name=jekyll -v "$(pwd):/src" grahamc/jekyll build
 - ls -lah _site
-- ./publish
+- ./publish.sh
