Dont publish if it fails to build

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,4 @@ before_install:
 
 script:
 - docker pull grahamc/jekyll
-- docker run --rm -v "$(pwd):/src" grahamc/jekyll build
-- ls -lah _site
-- ./publish.sh
+- docker run --rm -v "$(pwd):/src" grahamc/jekyll build && ./list-categories.sh && ./publish.sh
